syntax = "proto3";

package data;

// // // //

enum DwellingsDirectionType {
  DIRECTION_TYPE_UNSPECIFIED = 0;
  n = 1;
  s = 2;
  e = 3;
  w = 4;
}

enum DwellingsDoorType {
  DOOR_TYPE_UNSPECIFIED = 0;
  NULL = 1;
  DOORWAY = 2;
  REGULAR = 3;
}


enum DwellingsPropType {
  PROP_UNSPECIFIED = 0;
  ALTAR = 1;
  STATUE = 2;
  CURTAIN = 3;
  BED = 4;
}

enum DwellingsArchitectureType {
  ARCHITECTURE_UNSPECIFIED = 0;

  simple = 1;
  castle = 2;
  logs = 3;
  modern = 4;
  scifi = 5;
}
