syntax = "proto3";

package data;

import "data/dwellings/enum.proto";
import "data/dwellings/types.proto";
import "data/dwellings/decor.proto";

// // // //

message DwellingsRoomObj {
  optional string name = 1;
  repeated DwellingsCellObj cells = 2;
  reserved 3 to 9;

  optional string embed_type_id = 10;
  optional DwellingsLightObj embed_light = 11;
  repeated DwellingsPropObj embed_props = 12;
  optional uint32 embed_decor_seed = 13;
}

message DwellingsDoorObj {
  DwellingsEdgeObj edge = 1;
  optional DwellingsDoorType type = 2;
}

message DwellingsStairObj {
  DwellingsCellObj cell = 1;
  DwellingsDirectionType dir = 2;
  bool up = 3;
  reserved 4 to 9;

  optional bool embed_trapdoor = 10;
}
