syntax = "proto3";

package data;

import "data/dwellings/enum.proto";
import "data/dwellings/types.proto";
import "data/dwellings/level.proto";

// // // //

message DwellingsPlanObj {
  int32 level = 1;
  repeated DwellingsRoomObj rooms = 2;
  repeated DwellingsDoorObj doors = 3;
  repeated DwellingsEdgeObj windows = 4;
  repeated DwellingsStairObj stairs = 5;
  reserved 6 to 19;

  repeated DwellingsCellObj embed_chimneys = 20;
}

//

message DwellingsObj {
  repeated DwellingsPlanObj floors = 1;
  DwellingsEdgeObj exit = 2;
  DwellingsEdgeObj spiral = 3;
  reserved 4 to 19;

  optional string embed_name = 20;
  optional DwellingsArchitectureType embed_architecture = 21;
}
